; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/extr_resource.c_remove_e820_regions.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/extr_resource.c_remove_e820_regions.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, %struct.e820entry* }
%struct.e820entry = type { i64, i64 }
%struct.resource = type { i32 }

@e820 = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.resource*)* @remove_e820_regions to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @remove_e820_regions(%struct.resource* %0) #0 {
  %2 = alloca %struct.resource*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.e820entry*, align 8
  store %struct.resource* %0, %struct.resource** %2, align 8
  store i32 0, i32* %3, align 4
  br label %5

5:                                                ; preds = %27, %1
  %6 = load i32, i32* %3, align 4
  %7 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @e820, i32 0, i32 0), align 8
  %8 = icmp slt i32 %6, %7
  br i1 %8, label %9, label %30

9:                                                ; preds = %5
  %10 = load %struct.e820entry*, %struct.e820entry** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @e820, i32 0, i32 1), align 8
  %11 = load i32, i32* %3, align 4
  %12 = sext i32 %11 to i64
  %13 = getelementptr inbounds %struct.e820entry, %struct.e820entry* %10, i64 %12
  store %struct.e820entry* %13, %struct.e820entry** %4, align 8
  %14 = load %struct.resource*, %struct.resource** %2, align 8
  %15 = load %struct.e820entry*, %struct.e820entry** %4, align 8
  %16 = getelementptr inbounds %struct.e820entry, %struct.e820entry* %15, i32 0, i32 1
  %17 = load i64, i64* %16, align 8
  %18 = load %struct.e820entry*, %struct.e820entry** %4, align 8
  %19 = getelementptr inbounds %struct.e820entry, %struct.e820entry* %18, i32 0, i32 1
  %20 = load i64, i64* %19, align 8
  %21 = load %struct.e820entry*, %struct.e820entry** %4, align 8
  %22 = getelementptr inbounds %struct.e820entry, %struct.e820entry* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = add nsw i64 %20, %23
  %25 = sub nsw i64 %24, 1
  %26 = call i32 @resource_clip(%struct.resource* %14, i64 %17, i64 %25)
  br label %27

27:                                               ; preds = %9
  %28 = load i32, i32* %3, align 4
  %29 = add nsw i32 %28, 1
  store i32 %29, i32* %3, align 4
  br label %5

30:                                               ; preds = %5
  ret void
}

declare dso_local i32 @resource_clip(%struct.resource*, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
